# wordle-solver-rs

./: Cargo.toml  README.md  local.sh
src/: board.rs  commands.rs  enums.rs  leko_competition.rs  lib.rs  main.rs  repls.rs  tactics.rs  words.rs
src/binaries/: local.rs
src/leko_competition/: bridge.rs  interface.rs
src/tactics/: avg_info_max.rs  position_freq.rs  solver.rs
