[package]
name = "nkowne63-wordle-solver-rs-01"
description = "wordle solver by the nkowne63"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repl-rs = "0.2.6"
itertools = "0.10.3"
once_cell = "1.9.0"

[[bin]]
# bin.name must be "wordle-solver"
name = "wordle-solver"
path = "src/main.rs"