[package]
name = "nkowne63-wordle-solver-rs-01"
license = "MIT"
description = "wordle solver by the nkowne63"
version = "1.0.0"
edition = "2021"

[dependencies]
repl-rs = { version = "0.2.6", optional = true }
itertools = "0.10.3"
once_cell = "1.9.0"

[features]
local = ["repl-rs"]

[[bin]]
# for leko competition
name = "wordle-solver"
path = "src/binaries/leko.rs"

[[bin]]
name = "local-solver"
path = "src/binaries/local.rs"
required-features = ["local"]